--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <!-------------------------------------------main1ここまで------------>
-        <div class="container">
+        <div class="main2container">
             <div class="main2">
                 <p class="main2text">About</p>
                 <div class="main2flex">
@@ -74,14 +74,16 @@
             </div>
         </div>
         <!-----------------------------------------------main2ここまで---->
-        <p class="main3text">Contact</p>
         <div class="main3container">
-                <img src="cat-6.png">
-            <div class="main3">     
-                <p>You can come to see me.</p>
-                <div class="bordermap">Map</div>
-            </div>
-        </div>   
+            <p class="main3text">Contact</p>
+            <div class="main3flex">
+                    <img src="cat-6.png">
+                <div class="main3">     
+                    <p>You can come to see me.</p>
+                    <div class="bordermap">Map</div>
+                </div>
+            </div>   
+        </div>
     </div>
     
     <!-----------------------------------ここからスマホ用HTML------------------------------------------>
